# charge-management-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_charge_management_schema.py  0002_add_quote_request_validity_window.py  0003_add_contract_header_defaults.py  0004_add_charge_line_framework.py  0005_add_component_alias_and_line_audit.py  0006_add_scoped_component_alias_drivers.py  0007_add_transport_mode_to_component_aliases.py  0008_add_charge_date_basis_to_charge_components.py  0009_add_charge_allocation_profiles.py  0010_align_allocation_profile_contract.py  0011_add_business_date_profiles.py  0012_add_fx_rates_and_sequences.py
app/: __init__.py  main.py
app/api/v1/: charge_management.py
app/contracts/: charge-management-api.openapi.json
app/db/: __init__.py  models.py  session.py
app/domain/: __init__.py  fx_service.py  models.py  seeds.py  service.py
app/infrastructure/: __init__.py  adapters.py  database_service.py  sqlalchemy_repository.py
docs/: api-examples.md  architecture.md  authentication.md  core-concepts.md  database.md  quickstart.md  setup.md  testing.md
scripts/: check_database.py  export_openapi.py  run_tests.py
tests/: conftest.py  test_authentication.py  test_charge_management_api.py  test_database_persistence.py  test_fx_rate_api.py  test_migrations.py
