[project]
name = "charge-management-api"
version = "0.2.0"
description = "Standalone, adapter-neutral Charge Management API."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "Charge Management API contributors" },
]
keywords = ["charges", "freight", "logistics", "pricing", "rating", "fx"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.51.0",
  "pydantic==2.13.4",
  "SQLAlchemy==2.0.51",
  "alembic==1.18.5",
  "psycopg[binary]==3.3.4",
  "PyJWT[crypto]==2.13.0",
]

[project.urls]
Homepage = "https://github.com/soubhik-sen/charge-management-api"
Documentation = "https://github.com/soubhik-sen/charge-management-api#readme"
Issues = "https://github.com/soubhik-sen/charge-management-api/issues"
Source = "https://github.com/soubhik-sen/charge-management-api"

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "httpx==0.28.1",
  "build==1.5.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.contracts" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
